labs/08-integrations/traefik-forward-auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kc-forward-auth
spec:
  forwardAuth:
    address: http://oauth2-proxy.default.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - Authorization
