labs/08-integrations/traefik-forward-auth/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-protected
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.localhost`)
      kind: Rule
      middlewares:
        - name: kc-forward-auth
      services:
        - name: whoami
          port: 80
